# CSI_AGENT

./: .gitignore  comments_for_test.xlsx  dirty_dataset.xlsx  for_test_agent.xlsx  main.py  pyproject.toml  user_comments_50.xlsx
src/: agent_fastapi_server.py  agent_graph.py  chainlit_ui.py  compute_tool.py  compute_tool_fastapi.py  data_normalization_subgraph.py  data_normalization_tool.py  executor.py  langgraph_agent.py  load_data.py  model.py  prompts.py  prompts_agent.py  prompts_compute_tool.py  sandbox.py  sub_agents.py  subagents.py  tools.py
src/config/: model.py
