[project]
name = "csi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.13",
    "langgraph>=1.1.3",
    "nest-asyncio>=1.6.0",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "uvicorn>=0.42.0",
]
