[project]
name = "csi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "chainlit>=2.8.0",
    "fastapi>=0.135.1",
    "langchain>=1.2.13",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=1.0.0",
    "langgraph>=1.1.3",
    "httpx>=0.28.1",
    "nest-asyncio>=1.6.0",
    "openai>=2.29.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "typing-extensions>=4.15.0",
    "urllib3>=2.6.0",
    "uvicorn>=0.42.0",
    "lxml>=6.0.2",
]
